# person-generator

./: .gitignore  README.md  pyproject.toml
src/person_generator/: __init__.py  enums.py  generator.py  models.py  rules.py
src/person_generator/data/: ru.py  ua.py
tests/: test.py
